# src/2-features/2-boards/1-models/Board.js
@@ -1,0 +1,20 @@
+const {model} = require("mongoose")
+const {Schema} = require("mongoose")
+
+const Board = new Schema(
+    {
+        author_id: {
+            type: String,
+            required: true
+        },
+        title: {
+            type: String,
+            required: true
+        }
+    },
+    {
+        created: "created"
+    }
+)
+
+module.exports = model("Board", Board);
