# src/2-features/2-boards/2-controllers/getBoards.js
@@ -1,0 +1,22 @@
+const Board = require('../1-models/Board')
+
+const getBoards = async (req, res) => {
+    try {
+        const boards = await Board.find()
+        res.json({
+            resultCode: 0,
+            data: {
+                boards: boards,
+                count: boards?.length
+            }
+        })
+    } catch
+        (e) {
+        res.json({
+            resultCode: 1,
+            message: 'Yoops, something went wrong(getBoards)'
+        })
+    }
+}
+
+module.exports = getBoards
